# nubot_ws

./: .gitignore  .gitignore~  ReadME  github-key  github-key.pub  git说明
nubot_standalone/: LICENSE  README.md  package.xml
nubot_standalone/msg/: MotionCmd.msg~  ObstaclesInfo.msg  OminiVisionInfo.msg  VelocityInfo .msg~
nubot_standalone/msg/driverchanged/: MotionCmd.msg  MotorInfo-serial.msg
nubot_standalone/nubot_HWController/: CMakeLists.txt~  ReadMe  package.xml~
nubot_standalone/nubot_HWController/cfg/: controller.cfg
nubot_standalone/nubot_HWController/src/: nubot_teleop_joy.cpp  (+1 more)
nubot_standalone/omni_vision/: CMakeLists.txt  calibration.xml  difftable.txt  disofpic.txt  package.xml~  readme.txt  readme.txt~
nubot_standalone/omni_vision/calibration/: ROI.xml  calibration.xml  calibration2.m  errortable.txt  mirror_calib.xml  mirror_calib.xml~  result.txt~  whites.txt
nubot_standalone/omni_vision/calibration/calibration_omni/: calibration_dialog.ui
nubot_standalone/omni_vision/calibration/calibration_omni/include/: calibration_dialog.h  omniimage.h  scanpoints.h  whites.h
nubot_standalone/omni_vision/calibration/calibration_omni/include/core/: Angle.hpp  Circle.hpp  DPoint.hpp  core.hpp
nubot_standalone/omni_vision/calibration/calibration_omni/src/: calibration_dialog.cpp  image_subscribe.cpp  omniimage.cpp  scanpoints.cpp  whites.cpp
nubot_standalone/omni_vision/include/nubot/omni_vision/: ballfinder.h  colorsegment.h  fieldinformation.h  glocalization.h  glocalization.h~  localization.h  obstacles.h  odometry.h  omniimage.h  optimise.h  robotinformation.h  scanpoints.h  transfer.h  whites.h
nubot_standalone/omni_vision/src/: ballfinder.cpp  colorsegment.cpp  colorsegment.cpp~  fieldinformation.cpp  glocalization.cpp  localization.cpp  obstacles.cpp  odometry.cpp  omniimage.cpp  omnivision.cpp  optimise.cpp  robotinformation.cpp  scanpoints.cpp  transfer.cpp  whites.cpp
nubot_standalone/world_model/: CMakeLists.txt
nubot_standalone/world_model/include/nubot/world_model/: ball.h  multicast.h  obstacles.h  world_model.h
nubot_standalone/world_model/src/: ball.cpp  main.cpp  obstacles.cpp  world_model.cpp
prosilica_driver/prosilica_camera/: prosilica.launch~
src/nubot/: 编译报错说明
src/nubot/nubot_control/: CMakeLists.txt  package.xml
src/nubot/nubot_control/include/nubot/nubot_control/: behaviour.hpp  common.hpp  define.hpp  plan.hpp  strategy.hpp
src/nubot/nubot_control/src/: behaviour.cpp  nubot_control.cpp  plan.cpp  strategy.cpp  strategy.cpp.autosave  world_model.cpp
src/nubot/omni_vision/: CMakeLists.txt  package.xml
src/nubot/omni_vision/calibration/: ROI.xml  calibration.xml  calibration2.m  mirror_calib.xml  show_calibration.m  whites.txt
src/nubot/omni_vision/calibration/calibration_omni/: calibration_dialog.ui  calibration_omni.pro
src/nubot/omni_vision/calibration/calibration_omni/include/: calibration_dialog.h  omniimage.h  scanpoints.h  whites.h
src/nubot/omni_vision/calibration/calibration_omni/src/: calibration_dialog.cpp  omniimage.cpp  scanpoints.cpp  whites.cpp
src/nubot/omni_vision/cfg/: OmniVision.cfg
src/nubot/omni_vision/include/nubot/omni_vision/: MTTracker.h  ballfinder.h  fieldinformation.h  glocalization.h  localization.h  obstacles.h  odometry.h  omniimage.h  optimise.h  robotinformation.h  scanpoints.h  transfer.h  whites.h
src/nubot/omni_vision/src/: MTTracker.cpp  ballfinder.cpp  colorsegment.cpp  fieldinformation.cpp  glocalization.cpp  iAuction.cpp  localization.cpp  obstacles.cpp  odometry.cpp  omniimage.cpp  omnivision.cpp  optimise.cpp  robotinformation.cpp  scanpoints.cpp  transfer.cpp  whites.cpp
src/nubot/world_model/: CMakeLists.txt  package.xml
src/nubot/world_model/include/nubot/world_model/: robot.h  world_model.h
src/nubot/world_model/src/: ball.cpp  main.cpp  robot.cpp  world_model.cpp
src/nubot_standalone/: CMakeLists.txt  CMakeLists.txt.user.1.3
src/nubot_standalone/core/include/nubot/core/: Angle.hpp  common.h
src/nubot_standalone/msg/: BallInfo.msg~  CoachInfo.msg~  Info.msg  RobotInfo.msg  RobotInfo.msg~
src/nubot_standalone/nubot_HWController/: CMakeLists.txt  CMakeLists.txt.user.2.5pre1  package.xml
src/nubot_standalone/nubot_HWController/cfg/: controller.cfg~  controller~  无标题文档~
src/nubot_standalone/nubot_HWController/include/nubot_HWController/: nubot_HWController_node.h
src/nubot_standalone/nubot_HWController/msg/: LeverInfo.msg~  VelCmd.msg~
src/nubot_standalone/nubot_HWController/src/: cmac.cpp  nubot_HWController_node.cpp
src/nubot_standalone/nubot_HWController/src/soem/: EtherCAT.c  EtherCAT.h  ethercatcoe.c  ethercatconfig.h  ethercatdc.c  ethercatdc.h  ethercatfoe.h
src/nubot_standalone/nubot_control/: CMakeLists.txt
src/nubot_standalone/nubot_control/include/nubot/nubot_control/: behaviour.hpp
src/nubot_standalone/nubot_control/src/: nubot_control.cpp  plan.cpp
src/nubot_standalone/omni_vision/: ROI.xml
src/nubot_standalone/omni_vision/include/nubot/omni_vision/: ballfinder.h  colorsegment.h  glocalization.h  glocalization.h~  localization.h  obstacles.h  odometry.h  omniimage.h  optimise.h  robotinformation.h  transfer.h
src/nubot_standalone/omni_vision/src/: ballfinder.cpp  colorsegment.cpp  colorsegment.cpp~  fieldinformation.cpp  glocalization.cpp  localization.cpp  obstacles.cpp  odometry.cpp  omniimage.cpp  omnivision.cpp  optimise.cpp  robotinformation.cpp  scanpoints.cpp  transfer.cpp  whites.cpp
src/nubot_standalone/rtdb/: CMakeLists.txt  CreateIncludeLinks.sh  CreateIncludeLinks.sh~  README.TXT
src/nubot_standalone/rtdb/comm/: multicast.h
src/nubot_standalone/rtdb/config/: nubot.conf  nubot.conf~  rtdb.ini
src/nubot_standalone/rtdb/example/: CMakeLists.txt  write.cpp
src/nubot_standalone/rtdb/include/: rtdb_user.h
src/nubot_standalone/rtdb/include/nubot/rtdb/: omni_ball_infor.h  rtdb_user.h
src/nubot_standalone/rtdb/rtdb/: CMakeLists.txt  rtdb_api.cpp  rtdb_defs.h  rtdb_user.h
src/nubot_standalone/srv/: BallHandle.srv  Shoot.srv
src/nubot_standalone/world_model/include/nubot/world_model/: coachinfo.h
(+64 files in other folders)
